--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 	*{
-			font-family: Arial, helvatica, sans-serif;
+		font-family: Arial, helvatica, sans-serif;
 		}
 	body{
 		background-color: #49003d;
@@ -7,55 +7,40 @@
 	.form{
 		overflow: hidden;
 		margin: auto;
-		width: 50%;
-		height: 100%;
-		padding: 30px 30px 100px 30px;
+		width: 35%;
+		padding: 30px;
 		border-style: solid ;
-		border-width: ;
 		border-color: white;
-		border-radius:30px 30px 30px 0px;
-		background-color: #bfaabf;
+		border-radius:30px 0px 30px 0px;
+		background-color: #b69eb6;
 		}
-	input {
-		font-size: 15px;
+	p{
+		text-align: center;	
+		color: white;
+		font-weight: 550;
 	}
 	.top p{
-		text-align: center;
 		font-weight: 700;	
 		color: Black;
 	}
 	hr{
 		margin-bottom: 35px;
-		border: 5px solid black;
-  border-radius: 5px;
+		border: 2px solid black;
+  		border-radius: 5px;
 	}
 	h1{
 		color:White;
 		text-align: center;
 		font-size:3em;
 	}
-	div a {
-    text-align: center;
-    display: block;
-    margin: 0 auto;
-	}
-	
-	p{
-		text-align: center;	
-		color: white;
-		margin-top: 0;
-		font-weight: 550;
-
-	}
 	#question{
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 	}
-
   .btnNormal {
   width: 60%;
-  background-color: #0000b3;
+  background-color: #49003d;
   color: white;
   padding: 15px 20px;
   margin: 10px;
@@ -64,7 +49,7 @@
   cursor: pointer;
   font-weight: 600;
   }
-	.btnCorrect {
+  .btnCorrect {
   width: 150px;
   background-color: green;
   color: white;
@@ -86,19 +71,23 @@
   cursor: pointer;
   font-weight: 600;
 	}
-input[type=submit] {
+#next {
   width: 35%;
-  background-color: #49003d;
+  background-color: #0000b3;
   color: white;
   padding: 15px 20px;
+  font-size: 15px;
   text-align: center;
   display: block;
-  margin: 0 auto;
+  margin: 20px auto;
   border: none;
   border-radius:9px 9px 9px 0px; ;
   cursor: pointer;
   font-weight: 600;
 	}
-input[type=submit]:hover {
+#next:hover {
     background-color: #000066;
+  }
+  #required{
+  	color: red;
   }
